--- a/MeLi_challenge.ipynb
+++ b/MeLi_challenge.ipynb
@@ -51,13 +51,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 14,
       "metadata": {
         "id": "pHjjQL1_uhsi",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "fbae5f07-9314-4bfc-d61d-6c53c913f0a6"
+        "outputId": "e6149581-404c-4ff0-ea10-9790783082c2"
       },
       "outputs": [
         {
@@ -167,9 +167,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "25ddd470-7126-43c9-d739-d01bc308d514"
+        "outputId": "0f528daa-61c6-4c25-9fda-86b6853b6ae8"
       },
-      "execution_count": 2,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,9 +207,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hM5qCqktc5Cy",
-        "outputId": "fe08ba1a-c3fa-4faa-e1ca-f7f41fd71701"
+        "outputId": "3998fa0a-9004-447b-d3f4-29f5bc1a0bb6"
       },
-      "execution_count": 3,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -224,56 +224,56 @@
             "Name: user_id, dtype: object\n",
             "\n",
             "Observamos una muestra aleatoria de 50 registros\n",
-            "3264       MLB3394507400\n",
-            "7160       MLB3936251960\n",
-            "3392       MLB5669982060\n",
-            "5006        MLB434380560\n",
-            "5864      MLB10657689270\n",
-            "303        MLB1332387190\n",
-            "6281      MLB10657400210\n",
-            "4895      MLB10406347980\n",
-            "578       MLB10613595040\n",
-            "9740      MLB10649064790\n",
-            "5683      MLB10610334460\n",
-            "6000       MLB8388303740\n",
-            "1510       MLB2202479180\n",
-            "488        MLB4901574640\n",
-            "3977      MLB10609860200\n",
-            "6259      MLB10576588230\n",
-            "1702      MLB10539054140\n",
-            "8662      MLB10518780690\n",
-            "3000       MLB8318075620\n",
-            "3122      MLB10664525680\n",
-            "7819       MLB6457362020\n",
-            "1403       MLB4716958010\n",
-            "1890      MLB10654493090\n",
-            "10504    MLB3900196000-1\n",
-            "7626       MLB4170209660\n",
-            "11343     MLB10571656040\n",
-            "2656      MLB10516259620\n",
-            "1068       MLB2000727670\n",
-            "5819       MLB3149131050\n",
-            "2623       MLB8312766740\n",
-            "10172    MLB1401779800-1\n",
-            "8008       MLB7781777710\n",
-            "54         MLB3526663050\n",
-            "9688      MLB10643950990\n",
-            "7267      MLB10572759130\n",
-            "2930        MLB472442480\n",
-            "8829       MLB4773716710\n",
-            "6431         MLB81985690\n",
-            "6593       MLB2137861240\n",
-            "6056      MLB10593106220\n",
-            "4604       MLB6060815810\n",
-            "3253       MLB2373966860\n",
-            "1778       MLB6763492620\n",
-            "6863      MLB10511479080\n",
-            "374        MLB1773522950\n",
-            "1134       MLB4847073880\n",
-            "177        MLB7558847480\n",
-            "8513       MLB4294004940\n",
-            "4006      MLB10451365630\n",
-            "7379       MLB4848319620\n",
+            "6976        MLB5735023120\n",
+            "10593     MLB2004348900-1\n",
+            "7870       MLB10584382770\n",
+            "5232       MLB10564105150\n",
+            "10778     MLB8109462420-1\n",
+            "10132     MLB2014154210-1\n",
+            "10455      MLB499166830-1\n",
+            "10055    MLB10512657790-1\n",
+            "1077        MLB2816693120\n",
+            "1677        MLB2379512290\n",
+            "10568     MLB2593901140-1\n",
+            "9899       MLB10035808590\n",
+            "1816       MLB10344608890\n",
+            "6465       MLB10474682250\n",
+            "5573        MLB5920811470\n",
+            "9438       MLB10453860660\n",
+            "1037        MLB2384284940\n",
+            "4452        MLB2714491820\n",
+            "7886        MLB6220080110\n",
+            "2465        MLB8316838830\n",
+            "6714       MLB10374847820\n",
+            "4648       MLB10497689740\n",
+            "3189       MLB10003112290\n",
+            "4068       MLB10581636410\n",
+            "3892       MLB10623687560\n",
+            "9909       MLB10524294850\n",
+            "1570        MLB4203260080\n",
+            "6279        MLB4153134670\n",
+            "7070       MLB10557667590\n",
+            "10680     MLB3754050200-1\n",
+            "9050        MLB8077506260\n",
+            "8858        MLB7862802890\n",
+            "8356        MLB3267725490\n",
+            "8133        MLB3246062020\n",
+            "3266       MLB10630061730\n",
+            "9486        MLB6930404020\n",
+            "10445    MLB10619379770-1\n",
+            "617         MLB2743543900\n",
+            "2397        MLB1583458000\n",
+            "2941        MLB2640568440\n",
+            "7926        MLB1851102220\n",
+            "9265       MLB10567738790\n",
+            "4037        MLB5312858210\n",
+            "9200        MLB6227409670\n",
+            "6654       MLB10105197420\n",
+            "9705        MLB4522132890\n",
+            "2626        MLB2914851430\n",
+            "6300       MLB10623767350\n",
+            "632        MLB10589090750\n",
+            "1669        MLB2307367710\n",
             "Name: user_id, dtype: object\n"
           ]
         }
@@ -304,9 +304,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "dc985283-5d70-476f-c50f-47e3e126a67f"
+        "outputId": "bbbe86a5-ffbd-4294-84b5-1869abace371"
       },
-      "execution_count": 4,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -351,9 +351,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 468
         },
-        "outputId": "1a32d122-3842-4a59-989e-3796294e5a91"
+        "outputId": "5016cb5b-56dd-4985-bba8-e608c8a2e0db"
       },
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -420,7 +420,7 @@
       "metadata": {
         "id": "_e6pZcb-qFR1"
       },
-      "execution_count": 6,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -434,9 +434,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZFUHq_PHnDo_",
-        "outputId": "477aec25-ac66-49ca-e3e0-f420faa0ff46"
+        "outputId": "686a20e8-7e8c-43f5-fb8f-eb9ba680e91d"
       },
-      "execution_count": 7,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +449,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 20
         }
       ]
     },
@@ -467,9 +467,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "f824269a-b8f3-40fd-de04-c6c0994feee9"
+        "outputId": "363d8aed-e22a-4c5e-b9bd-0c1a1871b1da"
       },
-      "execution_count": 8,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -478,58 +478,58 @@
             "Cantidad de registros con error en semana\n",
             "350\n",
             "     first_login_dt  week_year         user_id  habito   habito_dt  \\\n",
-            "1957     2022-01-01         52   MLB3549774050       0         NaT   \n",
-            "8353     2022-01-02         52   MLB8215248640       0         NaT   \n",
+            "4007     2022-01-01         52  MLB10494428720       0         NaT   \n",
+            "3450     2022-01-02         52  MLB10498508930       0         NaT   \n",
+            "567      2022-01-01         52   MLB6976811740       0         NaT   \n",
+            "7112     2022-01-01         52   MLB4961822540       0         NaT   \n",
+            "3439     2022-01-01         52   MLB5710789870       0         NaT   \n",
+            "7905     2022-01-02         52   MLB8003721160       0         NaT   \n",
+            "3747     2022-01-02         52   MLB1292523330       0         NaT   \n",
+            "8633     2022-01-02         52   MLB6836166200       0         NaT   \n",
+            "2261     2022-01-02         52    MLB305505660       0         NaT   \n",
+            "7509     2022-01-01         52  MLB10494644780       0         NaT   \n",
+            "7768     2022-01-02         52  MLB10309858040       0         NaT   \n",
+            "9591     2022-01-02         52   MLB6965356690       1  2022-01-02   \n",
+            "7648     2022-01-02         52   MLB1976529990       0         NaT   \n",
+            "8499     2022-01-02         52   MLB8124087310       0         NaT   \n",
+            "433      2022-01-01         52  MLB10495174940       0         NaT   \n",
+            "9178     2022-01-01         52   MLB8117101360       0         NaT   \n",
+            "435      2022-01-01         52   MLB1040697750       0         NaT   \n",
+            "3873     2022-01-01         52  MLB10495938390       0         NaT   \n",
+            "2262     2022-01-02         52   MLB2061778540       0         NaT   \n",
+            "1694     2022-01-01         52   MLB3297819550       0         NaT   \n",
             "3036     2022-01-02         52  MLB10289484970       0         NaT   \n",
-            "3885     2022-01-02         52   MLB3231324460       0         NaT   \n",
-            "8209     2022-01-01         52   MLB8288245890       0         NaT   \n",
-            "5733     2022-01-02         52    MLB950258540       0         NaT   \n",
-            "1567     2022-01-02         52    MLB603464020       1  2022-01-22   \n",
-            "7893     2022-01-01         52   MLB8058073600       0         NaT   \n",
-            "4403     2022-01-02         52  MLB10497626000       0         NaT   \n",
-            "1969     2022-01-02         52  MLB10456007090       0         NaT   \n",
-            "143      2022-01-02         52   MLB2080909610       0         NaT   \n",
-            "7643     2022-01-02         52  MLB10497635230       0         NaT   \n",
-            "1418     2022-01-02         52   MLB4265105850       0         NaT   \n",
-            "6995     2022-01-01         52   MLB1323405560       0         NaT   \n",
-            "3590     2022-01-02         52  MLB10497639030       0         NaT   \n",
-            "3035     2022-01-02         52   MLB4560018820       0         NaT   \n",
-            "4649     2022-01-02         52   MLB1321899480       0         NaT   \n",
-            "1710     2022-01-02         52  MLB10497152720       0         NaT   \n",
-            "9034     2022-01-01         52     MLB58058950       0         NaT   \n",
-            "7248     2022-01-01         52  MLB10496428850       0         NaT   \n",
-            "5151     2022-01-02         52  MLB10497509720       0         NaT   \n",
-            "7769     2022-01-02         52   MLB6866202580       0         NaT   \n",
-            "6553     2022-01-02         52   MLB7257453610       0         NaT   \n",
-            "8501     2022-01-02         52  MLB10497120040       0         NaT   \n",
-            "1829     2022-01-01         52   MLB2280278470       0         NaT   \n",
+            "9443     2022-01-01         52  MLB10495284070       1  2022-01-22   \n",
+            "6668     2022-01-01         52   MLB1640059700       0         NaT   \n",
+            "4513     2022-01-01         52   MLB7530037970       0         NaT   \n",
+            "6426     2022-01-02         52  MLB10496998390       0         NaT   \n",
             "\n",
             "      activacion activacion_dt  setup    setup_dt  return   return_dt  \n",
-            "1957           0           NaT      0         NaT       0         NaT  \n",
-            "8353           0           NaT      0         NaT       1  2022-01-03  \n",
+            "4007           0           NaT      1  2022-01-01       1  2022-01-05  \n",
+            "3450           0           NaT      1  2022-01-03       0         NaT  \n",
+            "567            1    2022-01-01      1  2022-01-01       1  2022-01-02  \n",
+            "7112           0           NaT      0         NaT       1  2022-01-04  \n",
+            "3439           1    2022-01-12      1  2022-01-01       1  2022-01-03  \n",
+            "7905           0           NaT      0         NaT       1  2022-01-13  \n",
+            "3747           0           NaT      0         NaT       1  2022-01-05  \n",
+            "8633           0           NaT      0         NaT       0         NaT  \n",
+            "2261           0           NaT      0         NaT       1  2022-01-03  \n",
+            "7509           0           NaT      0         NaT       0         NaT  \n",
+            "7768           0           NaT      0         NaT       0         NaT  \n",
+            "9591           1    2022-01-02      1  2022-01-10       1  2022-01-03  \n",
+            "7648           0           NaT      0         NaT       1  2022-01-03  \n",
+            "8499           0           NaT      0         NaT       0         NaT  \n",
+            "433            0           NaT      1  2022-01-01       0         NaT  \n",
+            "9178           1    2022-01-15      1  2022-01-15       1  2022-01-15  \n",
+            "435            1    2022-01-01      0         NaT       1  2022-01-02  \n",
+            "3873           1    2022-01-22      1  2022-01-22       1  2022-01-03  \n",
+            "2262           0           NaT      0         NaT       0         NaT  \n",
+            "1694           0           NaT      0         NaT       1  2022-01-04  \n",
             "3036           1    2022-01-02      1  2022-01-16       1  2022-01-04  \n",
-            "3885           0           NaT      0         NaT       1  2022-01-23  \n",
-            "8209           0           NaT      0         NaT       1  2022-01-02  \n",
-            "5733           0           NaT      0         NaT       0         NaT  \n",
-            "1567           1    2022-01-15      1  2022-01-02       1  2022-01-03  \n",
-            "7893           0           NaT      0         NaT       1  2022-01-23  \n",
-            "4403           0           NaT      1  2022-01-02       0         NaT  \n",
-            "1969           0           NaT      0         NaT       1  2022-01-03  \n",
-            "143            0           NaT      0         NaT       0         NaT  \n",
-            "7643           1    2022-01-21      1  2022-01-03       1  2022-01-03  \n",
-            "1418           0           NaT      0         NaT       0         NaT  \n",
-            "6995           1    2022-01-01      0         NaT       1  2022-01-09  \n",
-            "3590           0           NaT      0         NaT       1  2022-01-03  \n",
-            "3035           0           NaT      0         NaT       0         NaT  \n",
-            "4649           0           NaT      0         NaT       1  2022-01-06  \n",
-            "1710           0           NaT      1  2022-01-02       1  2022-01-03  \n",
-            "9034           0           NaT      1  2022-01-01       1  2022-01-02  \n",
-            "7248           0           NaT      0         NaT       1  2022-01-02  \n",
-            "5151           0           NaT      0         NaT       1  2022-01-03  \n",
-            "7769           1    2022-01-02      0         NaT       1  2022-01-18  \n",
-            "6553           1    2022-01-02      1  2022-01-02       0         NaT  \n",
-            "8501           1    2022-01-02      1  2022-01-02       0         NaT  \n",
-            "1829           0           NaT      0         NaT       1  2022-01-03  \n"
+            "9443           1    2022-01-07      1  2022-01-02       1  2022-01-02  \n",
+            "6668           1    2022-01-27      1  2022-01-16       1  2022-01-16  \n",
+            "4513           1    2022-01-01      0         NaT       1  2022-01-18  \n",
+            "6426           1    2022-01-06      0         NaT       1  2022-01-09  \n"
           ]
         }
       ]
@@ -550,9 +550,9 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "8025abc2-0683-4bc3-a1bd-a02ec0fc3ba7"
+        "outputId": "32f8eb43-bd82-4b36-f213-0b2e70da7b77"
       },
-      "execution_count": 9,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,9 +595,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hfybqrsTQoH2",
-        "outputId": "94d60449-b6ae-4e27-a68d-70dbb0f24201"
+        "outputId": "6325e846-41c5-4e9f-c560-5982494b2cc1"
       },
-      "execution_count": 10,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,9 +652,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Qso9D5yXk6PB",
-        "outputId": "b85854cd-1af1-4495-bab4-364b4b9cf913"
+        "outputId": "46385545-8778-4f6b-8578-7c00c578004b"
       },
-      "execution_count": 11,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -747,9 +747,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hNZuyIP7hpa7",
-        "outputId": "ea751fe1-78e8-49ea-fc88-9f67341a8535"
+        "outputId": "1a138e09-c0f6-49ce-98bd-b46ae801cda8"
       },
-      "execution_count": 12,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -827,7 +827,7 @@
       "metadata": {
         "id": "PUcBcC1yho9W"
       },
-      "execution_count": 13,
+      "execution_count": 26,
       "outputs": []
     }
   ]
